# libcastel

./: .dir-locals.el  .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: FindLLVM.cmake
compile/: CMakeLists.txt
compile/includes/castel/toolchain/: Compiler.hh  Runner.hh  Source.hh
compile/sources/toolchain/: Compiler.cc  Runner.cc  Source.cc
examples/: startup.p9
examples/Tests/: HelloWorld.p9  RandomGenerator.p9
includes/castel/ast/: Expression.hh  Parameter.hh  Statement.hh  Token.hh
includes/castel/builder/: ClassBuilder.hh  Closure.hh  CodeGenerator.hh  Context.hh  FunctionBuilder.hh  GetterGenerator.hh  IRBuilder.hh  Scope.hh  SetterGenerator.hh
includes/castel/engine/: Box.hh  Closure.hh  CodeGenerator.hh  Context.hh  GenerationEngine.hh  LLVMHelpers.hh  Scope.hh  Value.hh
includes/castel/lexer/: Exception.hh  Lexeme.hh  LexemesTypes.xdef  Lexer.hh  Position.hh  Token.hh
includes/castel/parser/: Exception.hh  Parser.hh
includes/castel/runtime/: Attribute.hh  Boolean.hh  BooleanBox.hh  Box.hh  Class.hh  Dict.hh  DictBox.hh  Function.hh  FunctionBox.hh  List.hh  ListBox.hh  Null.hh  NullBox.hh  Number.hh  NumberBox.hh  String.hh  StringBox.hh  Undefined.hh  UndefinedBox.hh  api.hh  capi.hh  library.hh
includes/castel/utils/: CFunction.hh  LLVMExtensions.hh  Linked.hh  (+2 more)
microcastel/: CMakeLists.txt
microcastel/sources/: main.cc
misc/: astapi.txt  generator.js
parse/: CMakeLists.txt
parse/includes/castel/ast/: Expression.hh  Statement.hh  Token.hh
parse/includes/castel/ast/expr/: Binary.hh  Bool.hh  Class.hh  Conditional.hh  Dict.hh  External.hh  Function.hh  List.hh  Multary.hh  String.hh  Symbol.hh  Unary.hh  Undefined.hh  Variable.hh
parse/includes/castel/ast/expr/literal/: Boolean.hh  Class.hh  Dict.hh  Function.hh  List.hh  Null.hh  Number.hh  String.hh  Undefined.hh
parse/includes/castel/ast/stmt/: Block.hh  Expression.hh  If.hh  Require.hh  Return.hh  Throw.hh
parse/includes/castel/ast/stmt/ctrl/: ForIn.hh  If.hh  Try.hh  Until.hh  While.hh
parse/includes/castel/ast/stmt/decl/: Class.hh  Function.hh  Variables.hh
parse/includes/castel/ast/tools/: ConstVisitor.hh  Hold.hh  Linked.hh  List.hh  Visitor.hh
parse/includes/castel/lex/: Exception.hh  Lexeme.hh  Lexer.hh  types.def
parse/includes/castel/lexing/: Exception.hh  Lexeme.hh  Lexer.hh  types.def
parse/includes/castel/parse/: Exception.hh  Parser.hh
parse/includes/castel/parsing/: Exception.hh  Parser.hh
parse/sources/lex/: Exception.cc  Lexeme.cc  Lexer.rl
parse/sources/lexing/: Exception.cc  Lexeme.cc  Lexer.rl
parse/sources/parse/: Exception.cc  Parser.cc  lemon-parser.lm
parse/sources/parsing/: CMakeLists.txt  Exception.cc  Parser.cc  lemon-parser.lm
runtime/: CMakeLists.txt
runtime/includes/castel/runtime/: Allocator.hh  Attribute.hh  Box.hh  Context.hh  Loader.hh  Module.hh  capi.def  capi.hh  interface.hh  stdcastel.def
runtime/includes/castel/runtime/api/: exceptions.hh
runtime/includes/castel/runtime/attributes/: Member.hh  Method.hh
runtime/includes/castel/runtime/boxes/: Binding.hh  Bool.hh  Boolean.hh  Class.hh  Dict.hh  Function.hh  List.hh  Null.hh  Number.hh  Object.hh  Resource.hh  String.hh  Undefined.hh
runtime/includes/castel/runtime/capi/: bool.def  bool.hh  boolean.def  class.def  class.hh  dict.def  dict.hh  function.def  function.hh  list.def  list.hh  null.def  null.hh  number.def  number.hh  string.def  string.hh  undefined.def  undefined.hh
runtime/includes/castel/runtime/helper/: Fatal.hh  LSDA.hh  create.hh  malloc.hh  memoize.hh  unwrap.hh  wrap.hh
runtime/includes/castel/runtime/interfaces/: all.def  all.prelude.hh  boolean.def  boolean.prelude.hh  box.def  box.prelude.hh  class.def  class.prelude.hh  dict.def  dict.prelude.hh  exceptions.def  exceptions.prelude.hh  function.def  function.prelude.hh  list.def  list.prelude.hh  memory.def  memory.prelude.hh  null.def  null.prelude.hh  number.def  number.prelude.hh  operators.def  operators.prelude.hh  string.def  string.prelude.hh  undefined.def  undefined.prelude.hh
runtime/includes/castel/runtime/tool/: import.hh
runtime/sources/runtime/: Box.cc  Context.cc  capi.cc
runtime/sources/runtime/api/: exceptions.cc
runtime/sources/runtime/attributes/: Member.cc  Method.cc
runtime/sources/runtime/boxes/: Binding.cc  Bool.cc  Boolean.cc  Class.cc  Dict.cc  Function.cc  List.cc  Null.cc  Number.cc  String.cc  Undefined.cc
runtime/sources/runtime/capi/: bool.cc  class.cc  dict.cc  function.cc  list.cc  null.cc  number.cc  string.cc  undefined.cc  undefined.hh
runtime/sources/runtime/helper/: LSDA.cc
runtime/sources/runtime/interfaces/: bool.cc  class.cc  dict.cc  exceptions.cc  function.cc  list.cc  members.cc  memory.cc  null.cc  number.cc  operators.cc  string.cc  undefined.cc
runtime/sources/runtime/prototypes/: Class.ct
runtime/sources/std/: Class.ct
sources/ast/: AsClause.cc  FromClause.cc  Identifier.cc  ImportStatement.cc  Numeric.cc  Statement.cc  StatementList.cc
sources/builder/: ClassBuilder.cc  Closure.cc  CodeGenerator.cc  Context.cc  FunctionBuilder.cc  Scope.cc  SetterGenerator.cc
sources/engine/: Closure.cc  CodeGenerator.cc
sources/lexer/: Exception.cc  Lexeme.cc  Lexer.cc  Lexer.rl  Position.cc  Token.cc
sources/parser/: Exception.cc  Parser.cc  parse.c  parse.h  parse.lm  parse.out
sources/runtime/: Boolean.cc  BooleanBox.cc  Box.cc  Dict.cc  DictBox.cc  Function.cc  FunctionBox.cc  List.cc  ListBox.cc  Null.cc  NullBox.cc  Number.cc  NumberBox.cc  String.cc  StringBox.cc  Undefined.cc  UndefinedBox.cc  capi.cc  castelCrash.cc  castelMalloc.cc  p9Crash.cc  p9Malloc.cc  p9_malloc.cc
tests/: .gitignore  Makefile  empty.cc  libp9tests.cc  libp9tests.hh  main.cc  parseError.cc  tests.x  toString.cc  tokenizer.cpp  valid.cc
tests/assets/: full.p9  invalidLexeme.p9  syntaxError.p9  valid.p9
tests/includes/: LibP9Tests.hh  P9Tests.hh
tests/repository/: literalNumbers.cc
tests/sources/: LibP9Tests.cc  P9Tests.cc  main.cc
tools/: lemon.c
tools/lemon/: lempar.c
vm/grammar/: .gitignore  Makefile  p9.lex  p9.yacc
(+205 files in other folders)
